# 563-hw2

./: .gitignore  README.md  pyproject.toml
outputs/data/: correlation_bootstrap_vectors.npy  correlation_fit_summary.json  correlation_pair_0_2_summary.json  correlation_sample.npy  correlation_slice_samples_pair_0_2.npy  logistic_bootstrap_means.npy  logistic_bootstrap_summary.json  logistic_mle.json  logistic_sample.npy
outputs/reports/latex/: stat563_hw2_report.tex
reference_materials/: readme.md
scripts/: build_report.py  run_correlation_pipeline.py  run_logistic_pipeline.py
src/stat563_hw2/: __init__.py
src/stat563_hw2/assets/templates/: report_template.tex
src/stat563_hw2/correlation/: __init__.py  bootstrap.py  slice_sampling.py
src/stat563_hw2/logistic/: __init__.py  bootstrap.py  mle.py  plots.py
src/stat563_hw2/reporting/: __init__.py  render.py
