[project]
name = "stat563-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan-Nsoh", email = "bryan.anye.5@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.scripts]
stat563-hw2 = "stat563_hw2:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
